Added examples from uclid ditribution

--- a/bundles/uclid.xtext.ui/plugin.xml
+++ b/bundles/uclid.xtext.ui/plugin.xml
@@ -7,64 +7,11 @@
 			class="uclid.xtext.ui.UclidExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
 			contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
 			default="true"
-			extensions="uclid"
+			extensions="ucl"
 			id="uclid.xtext.Uclid"
 			name="Uclid Editor">
 		</editor>
 	</extension>
-	<extension
-      point="org.eclipse.ui.console.consoleFactories">
-   <consoleFactory
-         class="uclid.xtext.ui.UclidConsoleFactory"
-         icon="icons/etool16/my-console.png"
-         label="Uclid Console">
-   </consoleFactory>
-</extension>
-
-<extension point="org.eclipse.ui.bindings">
-		<key sequence="M1+H"
-			commandId="uclid.xtext.ui.commands.runUclid"
-			schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-			contextId="org.eclipse.ui.contexts.window"/>
-</extension>
-
-<extension point="org.eclipse.ui.contexts">
-   <context name="UClid mode"
-		description="UClid mode"
-        parentId="org.eclipse.ui.textEditorScope"
-        id="uclid.xtext.ui.UclidEditorScope" />
-</extension>
-
-<extension
-		point="org.eclipse.ui.commands">
-		<command
-       id="uclid.xtext.ui.commands.runUclid"
-       name="Run Uclid tool Command">
- </command>
-</extension>
-
-<extension
-		point="org.eclipse.ui.handlers">
-  <handler
-        class="uclid.xtext.ui.commands.UclidRunCommandHandler"
-        commandId="uclid.xtext.ui.commands.runUclid">
-  </handler>
-</extension>
-
-<extension point="org.eclipse.ui.menus">
-
-<menuContribution
-	locationURI="popup:org.eclipse.ui.popup.any?before=additions">
-	        
-	<command commandId="uclid.xtext.ui.commands.runUclid">
-	</command>
-	
-</menuContribution>
-	
-</extension>
-
-	
-
 	<extension
 		point="org.eclipse.ui.handlers">
 		<handler
@@ -150,12 +97,6 @@
 			name="Templates">
 			<keywordReference id="uclid.xtext.ui.keyword_Uclid"/>
 		</page>
-  <page
-        category="uclid.xtext.Uclid"
-        class="uclid.xtext.ui.preferences.UclidPreferencePage"
-        id="uclid.xtext.ui.preferences.UclidPreferencePage"
-        name="Uclid tool path setting">
-  </page>
 	</extension>
 	<extension
 			point="org.eclipse.ui.propertyPages">
@@ -266,7 +207,7 @@
 	<extension point="org.eclipse.core.contenttype.contentTypes">
 		<content-type
 			base-type="org.eclipse.core.runtime.text"
-			file-extensions="uclid"
+			file-extensions="ucl"
 			id="uclid.xtext.Uclid.contenttype"
 			name="Uclid File"
 			priority="normal">
@@ -277,13 +218,13 @@
 		point="org.eclipse.emf.ecore.extension_parser">
 		<parser
 			class="uclid.xtext.ui.UclidExecutableExtensionFactory:org.eclipse.xtext.resource.IResourceFactory"
-			type="uclid">
+			type="ucl">
 		</parser>
 	</extension>
 	<extension point="org.eclipse.xtext.extension_resourceServiceProvider">
 		<resourceServiceProvider
 			class="uclid.xtext.ui.UclidExecutableExtensionFactory:org.eclipse.xtext.ui.resource.IResourceUIServiceProvider"
-			uriExtension="uclid">
+			uriExtension="ucl">
 		</resourceServiceProvider>
 	</extension>
 	<!-- marker definitions for uclid.xtext.Uclid -->
@@ -320,7 +261,7 @@
 	<extension point="org.eclipse.xtext.builder.participant">
 		<participant
 			class="uclid.xtext.ui.UclidExecutableExtensionFactory:org.eclipse.xtext.builder.IXtextBuilderParticipant"
-			fileExtensions="uclid"/>
+			fileExtensions="ucl"/>
 	</extension>
 	<extension point="org.eclipse.ui.preferencePages">
 		<page
@@ -463,7 +404,7 @@
 	<extension point="org.eclipse.compare.contentViewers">
 		<viewer id="uclid.xtext.Uclid.compare.contentViewers"
 			class="uclid.xtext.ui.UclidExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
-			extensions="uclid">
+			extensions="ucl">
 		</viewer>
 		<contentTypeBinding
 			contentTypeId="uclid.xtext.Uclid.contenttype"
@@ -472,7 +413,7 @@
 	<extension point="org.eclipse.compare.contentMergeViewers">
 		<viewer id="uclid.xtext.Uclid.compare.contentMergeViewers"
 			class="uclid.xtext.ui.UclidExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
-			extensions="uclid" label="Uclid Compare">
+			extensions="ucl" label="Uclid Compare">
 		</viewer>
 		<contentTypeBinding
 			contentTypeId="uclid.xtext.Uclid.contenttype"
@@ -481,19 +422,13 @@
 	<extension point="org.eclipse.ui.editors.documentProviders">
 		<provider id="uclid.xtext.Uclid.editors.documentProviders"
 			class="uclid.xtext.ui.UclidExecutableExtensionFactory:org.eclipse.xtext.ui.editor.model.XtextDocumentProvider"
-			extensions="uclid">
+			extensions="ucl">
 		</provider>
 	</extension>
 	<extension point="org.eclipse.team.core.fileTypes">
 		<fileTypes
-			extension="uclid"
+			extension="ucl"
 			type="text">
 		</fileTypes>
 	</extension>
- <extension
-       point="org.eclipse.core.runtime.preferences">
-    <initializer
-          class="uclid.xtext.ui.preferences.PreferenceInitializer">
-    </initializer>
- </extension>
 </plugin>
